Created blank screens and defined their structure. Navigation is done through the navigation drawer. The recipe page is navigated through tabs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Spoonzilla</string>
+
+    <string name="tab_name_overview">"overview"</string>
+    <string name="tab_name_ingredients">"ingredients"</string>
+    <string name="tab_name_instructions">"instructions"</string>
+    <string name="tab_name_nutrient">"nutrient"</string>
+
+
+    <string name="menu_title_home">"Home"</string>
+    <string name="menu_title_profile">"Profile"</string>
+    <string name="menu_title_settings">"Settings"</string>
+    <string name="menu_title_log_out">"Log Out"</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
