--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
     <string name="app_bar_search_description">Search recipes</string>
     <string name="app_bar_search_title">Search</string>
     <string name="exit_message">Press back again to exit</string>
+    <string name="recently_viewed_label_title">Pull me up</string>
+    <string name="recently_viewed_label_title_expanded">Viewed</string>
+    <string name="recently_viewed_fab_description">Press to show recently viewed window label</string>
 
 
     <!--    dish_item-->
@@ -28,6 +31,7 @@
     <string name="menu_title_profile">Profile</string>
     <string name="menu_title_settings">Settings</string>
     <string name="menu_title_search">Search</string>
+    <string name="menu_title_marked">Marked</string>
     <string name="menu_title_log_out">Log Out</string>
 
     <!--    fragment_advanced_search_settings-->
@@ -41,6 +45,7 @@
     <string name="include_meal_type_button_text">Meal types</string>
     <string name="instructions_switch_description">Recipes must have instructions</string>
     <string name="advanced_search_hint">Search query</string>
+    <string name="marked_search_hint">Marked search</string>
     <string name="advanced_search_button">Search</string>
 
     <!--    fragment_home-->
@@ -138,9 +143,11 @@
 
     <!--    Common-->
     <string name="app_name" translatable="false">Spoonzilla</string>
-    <string name="search_hint">Quick search</string>
+    <string name="home_search_hint">Quick search</string>
+    <string name="search_hint">Search</string>
     <string name="fragment_home">Home</string>
     <string name="fragment_profile">Profile</string>
+    <string name="fragment_marked">Marked</string>
     <string name="fragment_settings">Settings</string>
     <string name="fragment_advanced_search">Search</string>
     <string name="fragment_advanced_search_settings">Search settings</string>
@@ -150,6 +157,5 @@
     <string name="fragment_recipe_nutrient">Nutrient</string>
     <string name="fragment_recipe_overview">Overview</string>
     <string name="fragment_similar_recipes">Similar</string>
-
 
 </resources>
