Changed the way of obtaining items in the dialogue. Items are taken from resources. Removed unused resources.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,48 +82,48 @@
 
 
     <!--    dialog_cuisine-->
-    <string name="dialog_cuisine_african">African</string>
-    <string name="dialog_cuisine_american">American</string>
-    <string name="dialog_cuisine_british">British</string>
-    <string name="dialog_cuisine_cajun">Cajun</string>
-    <string name="dialog_cuisine_caribbean">Caribbean</string>
-    <string name="dialog_cuisine_chinese">Chinese</string>
-    <string name="dialog_cuisine_eastern_european">Eastern European</string>
-    <string name="dialog_cuisine_european">European</string>
-    <string name="dialog_cuisine_french">French</string>
-    <string name="dialog_cuisine_german">German</string>
-    <string name="dialog_cuisine_greek">Greek</string>
-    <string name="dialog_cuisine_indian">Indian</string>
-    <string name="dialog_cuisine_irish">Irish</string>
-    <string name="dialog_cuisine_italian">Italian</string>
-    <string name="dialog_cuisine_japanese">Japanese</string>
-    <string name="dialog_cuisine_jewish">Jewish</string>
-    <string name="dialog_cuisine_korean">Korean</string>
-    <string name="dialog_cuisine_latin_american">Latin American</string>
-    <string name="dialog_cuisine_mediterranean">Mediterranean</string>
-    <string name="dialog_cuisine_mexican">Mexican</string>
-    <string name="dialog_cuisine_middle_eastern">Middle Eastern</string>
-    <string name="dialog_cuisine_nordic">Nordic</string>
-    <string name="dialog_cuisine_southern">Southern</string>
-    <string name="dialog_cuisine_spanish">Spanish</string>
-    <string name="dialog_cuisine_thai">Thai</string>
-    <string name="dialog_cuisine_vietnamese">Vietnamese</string>
+    <string name="cuisine_african">African</string>
+    <string name="cuisine_american">American</string>
+    <string name="cuisine_british">British</string>
+    <string name="cuisine_cajun">Cajun</string>
+    <string name="cuisine_caribbean">Caribbean</string>
+    <string name="cuisine_chinese">Chinese</string>
+    <string name="cuisine_eastern_european">Eastern European</string>
+    <string name="cuisine_european">European</string>
+    <string name="cuisine_french">French</string>
+    <string name="cuisine_german">German</string>
+    <string name="cuisine_greek">Greek</string>
+    <string name="cuisine_indian">Indian</string>
+    <string name="cuisine_irish">Irish</string>
+    <string name="cuisine_italian">Italian</string>
+    <string name="cuisine_japanese">Japanese</string>
+    <string name="cuisine_jewish">Jewish</string>
+    <string name="cuisine_korean">Korean</string>
+    <string name="cuisine_latin_american">Latin American</string>
+    <string name="cuisine_mediterranean">Mediterranean</string>
+    <string name="cuisine_mexican">Mexican</string>
+    <string name="cuisine_middle_eastern">Middle Eastern</string>
+    <string name="cuisine_nordic">Nordic</string>
+    <string name="cuisine_southern">Southern</string>
+    <string name="cuisine_spanish">Spanish</string>
+    <string name="cuisine_thai">Thai</string>
+    <string name="cuisine_vietnamese">Vietnamese</string>
 
     <!--    dialog_meal_types-->
-    <string name="meal_type_main_course">main course</string>
-    <string name="meal_type_side_dish">side dish</string>
-    <string name="meal_type_dessert">dessert</string>
-    <string name="meal_type_appetizer">appetizer</string>
-    <string name="meal_type_salad">salad</string>
-    <string name="meal_type_bread">bread</string>
-    <string name="meal_type_breakfast">breakfast</string>
-    <string name="meal_type_soup">soup</string>
-    <string name="meal_type_beverage">beverage</string>
-    <string name="meal_type_sauce">sauce</string>
-    <string name="meal_type_marinade">marinade</string>
-    <string name="meal_type_fingerfood">fingerfood</string>
-    <string name="meal_type_snack">snack</string>
-    <string name="meal_type_drink">drink</string>
+    <string name="meal_type_main_course">Main course</string>
+    <string name="meal_type_side_dish">Side dish</string>
+    <string name="meal_type_dessert">Dessert</string>
+    <string name="meal_type_appetizer">Appetizer</string>
+    <string name="meal_type_salad">Salad</string>
+    <string name="meal_type_bread">Bread</string>
+    <string name="meal_type_breakfast">Breakfast</string>
+    <string name="meal_type_soup">Soup</string>
+    <string name="meal_type_beverage">Beverage</string>
+    <string name="meal_type_sauce">Sauce</string>
+    <string name="meal_type_marinade">Marinade</string>
+    <string name="meal_type_fingerfood">Fingerfood</string>
+    <string name="meal_type_snack">Snack</string>
+    <string name="meal_type_drink">Drink</string>
 
     <!--    dialog_intolerances-->
     <string name="intolerance_dairy">Dairy</string>
