The ingredient list now changes per serving. Added payload to DishAlarmDiff. Fixed issuance of recipes on the home page, now personal preferences are used correctly. Added the ability to select settings on the home page. Fixed crash when switching to the AdvancedSearchFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,6 +160,8 @@
     <string name="mode_night_yes">Yes</string>
     <string name="mode_night_system_follow">System follow</string>
     <string name="mode_night_auto_battery">Auto battery</string>
+    <string name="home_page_content_popular">Popular</string>
+    <string name="home_page_content_random">Random</string>
 
     <!--    Common-->
     <string name="app_name" translatable="false">Spoonzilla</string>
